# EasyDeployTool

./: CMakeLists.txt
cmake/: easy_deploy_toolConfig.cmake.in
deploy_core/: CMakeLists.txt
deploy_utils/: CMakeLists.txt
deploy_utils/benchmark_utils/: CMakeLists.txt
deploy_utils/benchmark_utils/src/: detection_2d_benchmark_utils.cpp  sam_benchmark_utils.cpp  stereo_matching_benchmark_utils.cpp
deploy_utils/common_utils/: CMakeLists.txt
deploy_utils/eval_utils/: CMakeLists.txt
deploy_utils/image_processing_utils/: CMakeLists.txt
deploy_utils/test_utils/: CMakeLists.txt
inference_core/: CMakeLists.txt
inference_core/ort_core/: CMakeLists.txt
inference_core/rknn_core/: CMakeLists.txt
inference_core/trt_core/: CMakeLists.txt
